<resources>
    <string name="hello_world">Hello world!</string>

    <!-- Activity names -->
    <string name="app_name">PSO2 Kue</string>
    <string name="settings_name">Settings</string>

    <!-- String to display when ListView is empty -->
    <string name="listview_empty">No upcoming emergency quests. Check back soon!</string>

    <!-- Menu Options -->
    <string name="action_settings">Settings</string>

    <!-- Date Representation -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <!-- Default view Strings -->
    <string name="default_eq_name">Chaotic Tranquility</string>
    <string name="default_eq_time">20:00</string>
    <string name="default_eq_day">"Tuesday, June 30"</string>

    <!-- Alert Strings -->
    <string name="list_item_eq_approaching">Emergency Quest Approaching</string>
    <string name="list_item_eq_active">Emergency Quest Active</string>

    <!-- Time format used to display time left until EQ -->
    <string name="list_item_eq_timeformat" formatted="false">%02d:%02d</string>

    <!-- Preference strings -->
    <!-- Generic on/off strings used for twostate preferences -->
    <string name="pref_twostate_on">On</string>
    <string name="pref_twostate_off">Off</string>

    <!-- Update timetable -->
    <string name="pref_update_timetable_label">Update Timetable</string>
    <string name="pref_update_timetable_key" translatable="false">update_timetable</string>
    <string name="pref_update_default">Last Updated: Never</string>

    <!-- Toggle notification state -->
    <string name="pref_notifystate_label">Push Notifications</string>
    <string name="pref_notifystate_key" translatable="false">notifystate</string>
    <string name="pref_notifystate_default" translatable="false">true</string>

    <!-- Toggle Filter state -->
    <string name="pref_filterstate_label">Enable Filter</string>
    <string name="pref_filterstate_key" translatable="false">filterstate</string>
    <string name="pref_filterstate_default" translatable="false">false</string>

    <!-- Filter notifications -->
    <string name="pref_filterdetails_label">Filter Options</string>
    <string name="pref_filterdetails_key" translatable="false">filter</string>
    <!-- (#) EQs tracked. -->
    <string name="pref_filterdetails_summarytext">EQs tracked.</string>

    <!-- Ship Preference -->
    <string name="pref_ship_label">Ship Number</string>
    <string name="pref_ship_key" translatable="false">ship_num</string>
    <string name="pref_ship_default" translatable="false">2</string>

    <!-- Quest Name Language Preference -->
    <string name="pref_questlanguage_label">Quest Language</string>
    <string name="pref_questlanguage_key" translatable="false">quest_language</string>
    <string name="pref_questlanguage_default" translatable="false">english</string>

    <!-- 12/24 hour clock preference -->
    <string name="pref_clock_label">Time Display</string>
    <string name="pref_clock_key" translatable="false">clock</string>
    <string name="pref_clock_default" translatable="false">24</string>

    <!-- Timezone preference -->
    <string name="pref_timezone_label">Timezone</string>
    <string name="pref_timezone_key" translatable="false">timezone</string>
    <string name="pref_timezone_default" translatable="false">default</string>

    <!-- "Last Updated" string for calendar update in preferences -->
    <string name="update_updating">Updating…</string>
    <string name="update_lastupdated">Last Updated</string>

    <!-- Toast Strings -->
    <string name="calendar_update_success">Updated emergency quest timetable</string>
    <string name="calendar_update_failure">Failed to update timetable, check your network connection</string>
    <string name="calendar_update_in_use">Failed to update timetable, task already in progress</string>

    <!-- Progress Dialog Strings -->
    <string name="calendar_progress_updating">Updating Timetable…</string>
    <string name="general_progress_wait">Please wait.</string>

    <!-- Ads -->
    <string name="banner_ad_unit_id">ca-app-pub-8451127810761579/1386633643</string>
</resources>
