<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingTop="2dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingStart="15dp">
        <!-- Static size width here to maintain position -->
        <TextView
            android:id="@+id/list_item_eq_name"
            style="@style/list_item_textview_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_eq_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <!--<TextView
            style="@style/list_item_textview"
            android:text="@string/default_weather"
            android:id="@+id/list_item_forecast_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_eq_time"
            style="@style/list_item_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/default_eq_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/list_item_eq_day"
            style="@style/list_item_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/default_eq_day" />
    </LinearLayout>
</LinearLayout>